[gd_scene load_steps=2 format=3 uid="uid://g2l7m8n9o0p1q"]

[ext_resource type="Script" path="res://Scripts/EventFormScreen.gd" id="1_eventform"]

[node name="EventFormScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eventform")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.14, 0.18, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="MarginLeft" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "← Cancel"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginRight" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 130.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2

[node name="FormContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="TopMargin" type="Control" parent="ScrollContainer/FormContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ScrollContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_colors/font_color = Color(1, 0.84, 0.35, 1)
text = "Create New Event"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="ScrollContainer/FormContainer"]
layout_mode = 2

[node name="Label1" type="Label" parent="ScrollContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
text = "Event Title *"

[node name="TitleInput" type="LineEdit" parent="ScrollContainer/FormContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.95, 0.95, 1, 1)
placeholder_text = "e.g., Community Garage Sale"

[node name="Label2" type="Label" parent="ScrollContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
text = "Category *"

[node name="CategoryDropdown" type="OptionButton" parent="ScrollContainer/FormContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="Label3" type="Label" parent="ScrollContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
text = "Date * (YYYY-MM-DD)"

[node name="DateInput" type="LineEdit" parent="ScrollContainer/FormContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.95, 0.95, 1, 1)
placeholder_text = "2024-12-25"

[node name="Label4" type="Label" parent="ScrollContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
text = "Time (optional)"

[node name="TimeInput" type="LineEdit" parent="ScrollContainer/FormContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.95, 0.95, 1, 1)
placeholder_text = "2:00 PM or 14:00"

[node name="Label5" type="Label" parent="ScrollContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
text = "Location *"

[node name="LocationInput" type="LineEdit" parent="ScrollContainer/FormContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.95, 0.95, 1, 1)
placeholder_text = "123 Main St, Community Center"

[node name="Label6" type="Label" parent="ScrollContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
text = "Contact Info (optional)"

[node name="ContactInput" type="LineEdit" parent="ScrollContainer/FormContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.95, 0.95, 1, 1)
placeholder_text = "Phone or email"

[node name="Label7" type="Label" parent="ScrollContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
text = "Description (optional)"

[node name="DescriptionInput" type="TextEdit" parent="ScrollContainer/FormContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.95, 0.95, 1, 1)
placeholder_text = "Tell people more about your event..."
wrap_mode = 1

[node name="BottomMargin" type="Control" parent="ScrollContainer/FormContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -190.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -130.0
offset_right = -150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "✓ Save Event"
